fixed depts card text alignment bug

--- a/src/pages/Department/style.module.scss
+++ b/src/pages/Department/style.module.scss
@@ -35,6 +35,9 @@
   .text {
     color: $color-white;
     position: absolute;
+    width: 95%;
     bottom: 5%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
